[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Pictures/Mouse_icon_vector.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MouseBR.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[node name="1BR" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 584, 369 )
scale = Vector2( 6.3556, 2.51975 )
texture = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="Anterior" type="Button" parent="."]
margin_left = 420.0
margin_top = 530.0
margin_right = 492.0
margin_bottom = 550.0
text = "Anterior"

[node name="Proximo" type="Button" parent="."]
margin_left = 502.0
margin_top = 530.0
margin_right = 574.0
margin_bottom = 550.0
text = "Proximo"

[node name="Menu" type="Button" parent="."]
margin_left = 1.0
margin_top = 579.0
margin_right = 49.0
margin_bottom = 599.0
text = "Menu"

[node name="MouseIconVector" type="Sprite" parent="."]
position = Vector2( 485, 213 )
scale = Vector2( 0.393646, 0.320475 )
texture = ExtResource( 3 )

[node name="TITULO" type="Label" parent="."]
margin_left = 296.0
margin_top = 38.0
margin_right = 672.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "CONTROLES MOUSE"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 136.0
margin_top = 357.0
margin_right = 837.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 5 )
text = "Caso seja selecionado o modo de controle apenas com o mouse,
 a movimentação sera feita inteiramente com o mouse
usando o botão esquerdo para atirar para frente e o direito para
atirar para trás"
align = 1
valign = 1

[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
[connection signal="pressed" from="Proximo" to="." method="_on_Proximo_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
